# nrf-mcp

./: .gitignore  CLAUDE.md  README.md
nrf_mcp/: pyproject.toml  server.py
nrf_mcp_ts/: README.md  package-lock.json  package.json
nrf_mcp_ts/src/: config.ts  server.ts
nrf_mcp_ts/src/tools/: board.ts  build.ts  buildinfo.ts  flash.ts  run.ts  uart.ts
